--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -18,8 +18,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          # - language: c-cpp
-          #   build-mode: manual
+          - language: c-cpp
+            build-mode: none
           - language: javascript-typescript
             build-mode: none
           - language: python
