--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -9,7 +9,7 @@ on:
     - cron: '0 0 * * *'
 
 env:
-  CODEQL_EXTRACTOR_CPP_BUILD_MODE_NONE: 'true'
+  CODEQL_EXTRACTOR_CPP_BUILD_MODE_NONE: 'true' # scanning c/c++ without building it is an experimental feature and needs to be enabled like this until released
 
 jobs:
   analyze:
