--- a/src/usr/share/opentelemetry_shell/agent.instrumentation.java/deep/pom.xml
+++ b/src/usr/share/opentelemetry_shell/agent.instrumentation.java/deep/pom.xml
@@ -4,9 +4,9 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>io.opentelemetry.javaagent</groupId>
-      <artifactId>opentelemetry-javaagent</artifactId>
-      <version>2.13.3</version>
+      <groupId>org.javassist</groupId>
+      <artifactId>javassist</artifactId>
+      <version>3.28.0-GA</version>
     </dependency>
   </dependencies>
 </project>
