--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -30,7 +30,7 @@ jobs:
           - language: java
             build-mode: none
     steps:
-      - uses: plengauer/thoth/actions/instrument/job@v5.11.0
+      - uses: plengauer/thoth/actions/instrument/job@v5.12.0
         with:
           secrets_to_redact: '${{ toJSON(secrets) }}'
         env:
@@ -44,6 +44,7 @@ jobs:
           languages: ${{ matrix.language }}
           build-mode: ${{ matrix.build-mode }}
       - run: cat /opt/hostedtoolcache/CodeQL/2.21.0/x64/codeql/codeql
+      - run: sed -i 's~/bin/sh~/bin/bash~g' /opt/hostedtoolcache/CodeQL/2.21.0/x64/codeql/codeql
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
         with:
