--- a/.github/workflows/deploy_observability.yaml
+++ b/.github/workflows/deploy_observability.yaml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - uses: plengauer/opentelemetry-github/actions/instrument/deploy@v5.11.0
         with:
+          github_token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
           job_level_instrumentation_exclude: 'Test,Refresh Demos,GitHub,Workflow Example,Experiment'
         env:
           OTEL_EXPORTER_OTLP_ENDPOINT: '${{ secrets.OTEL_EXPORTER_OTLP_ENDPOINT }}'
