--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'OpenTelemetry (Stub)'
-description: "Stub: Don't use this action directly. Read [the documentation](https://github.com/plengauer/Thoth/blob/main/README.md) on how to deploy OpenTelemetry to your GitHub actions."
+description: "Stub: Don't use this action directly. Read [the documentation](https://github.com/plengauer/Thoth/blob/main/README.md)."
 branding:
   icon: 'activity'
   color: 'blue'
