--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: 'OpenTelemetry (Stub)'
-description: "Stub: Don't use this action directly. Read [the documentation](https://github.com/plengauer/Thoth/blob/main/README.md)."
+name: 'OpenTelemetry'
+description: "Export traces, metrics, and logs by injecting deeply into node, docker, javascript and composite actions."
 branding:
   icon: 'activity'
   color: 'blue'
