--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'OpenTelemetry'
+name: 'OpenTelemetry for GitHub Workflows, Jobs and Steps'
 description: "Export traces, metrics, and logs by injecting deeply into node, docker, javascript and composite actions."
 branding:
   icon: 'activity'
