--- a/.github/workflows/analyze.yaml
+++ b/.github/workflows/analyze.yaml
@@ -44,9 +44,11 @@ jobs:
           languages: ${{ matrix.language }}
           build-mode: ${{ matrix.build-mode }}
       - run: sudo sed -i 's~"${CODEQL_JAVA_HOME}/bin/java"~_otel_inject "${CODEQL_JAVA_HOME}/bin/java"~g' /opt/hostedtoolcache/CodeQL/2.21.0/x64/codeql/codeql
-      - run: sudo sed -i 's~#!/bin/sh~#!/bin/bash\nset -x~g' /opt/hostedtoolcache/CodeQL/2.21.0/x64/codeql/codeql
+      - run: sudo sed -i 's~#!/bin/sh~#!/bin/bash\nset -x\nexec 2> /tmp/codeql.log~g' /opt/hostedtoolcache/CodeQL/2.21.0/x64/codeql/codeql
       - run: cat /opt/hostedtoolcache/CodeQL/2.21.0/x64/codeql/codeql
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
         with:
           category: "/language:${{matrix.language}}"
+        continue-on-error: true
+      - run: cat /tmp/codeql.log
