--- a/.github/workflows/analyze.yaml
+++ b/.github/workflows/analyze.yaml
@@ -43,7 +43,7 @@ jobs:
         with:
           languages: ${{ matrix.language }}
           build-mode: ${{ matrix.build-mode }}
-      - run: sudo sed -i 's~"${CODEQL_JAVA_HOME}/bin/java"~_otel_inject "${CODEQL_JAVA_HOME}/bin/java"~g' /opt/hostedtoolcache/CodeQL/2.21.0/x64/codeql/codeql
+      # - run: sudo sed -i 's~"${CODEQL_JAVA_HOME}/bin/java"~_otel_inject "${CODEQL_JAVA_HOME}/bin/java"~g' /opt/hostedtoolcache/CodeQL/2.21.0/x64/codeql/codeql
       - run: sudo sed -i 's~\. "$chainfile"~\\. "$chainfile"~g' /opt/hostedtoolcache/CodeQL/2.21.0/x64/codeql/codeql
       - run: cat /opt/hostedtoolcache/CodeQL/2.21.0/x64/codeql/codeql
       - name: Perform CodeQL Analysis
