--- a/.github/workflows/analyze.yaml
+++ b/.github/workflows/analyze.yaml
@@ -46,6 +46,7 @@ jobs:
       - run: sudo sed -i 's~"${CODEQL_JAVA_HOME}/bin/java"~_otel_inject "${CODEQL_JAVA_HOME}/bin/java"~g' /opt/hostedtoolcache/CodeQL/2.21.0/x64/codeql/codeql
       - run: sudo sed -i 's~\. "$chainfile"~\\. "$chainfile"~g' /opt/hostedtoolcache/CodeQL/2.21.0/x64/codeql/codeql
       - run: cat /opt/hostedtoolcache/CodeQL/2.21.0/x64/codeql/codeql
+      - run: cat /opt/hostedtoolcache/CodeQL/2.21.0/x64/codeql/python/tools/pre-finalize.sh
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
         with:
