--- a/actions/instrument/deploy/action.yaml
+++ b/actions/instrument/deploy/action.yaml
@@ -46,9 +46,8 @@ runs:
       if: steps.find-workflow-level-instrumentation.outputs.path == null
       shell: bash
       run: |
-        set -x
         echo "${{ inputs.workflow_level_instrumentation_template }}" > "${{ inputs.workflows_directory }}/${{ inputs.workflow_level_instrumentation_file_name }}"
-        cat "${{ steps.find-self.outputs.path }}" | yq '.jobs[].steps[].env | keys[]' | grep '^OTEL_' | while read -r key; do
+        cat "${{ steps.find-self.outputs.path }}" | yq '.jobs[].steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/deploy@*") | .env | keys[]' | grep '^OTEL_' | while read -r key; do
           value="$(cat "${{ steps.find-self.outputs.path }}" | yq '.jobs[].steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/deploy@*") | .env.'"$key")"
           yq -i '.jobs[].steps[0].env.'"$key"' = "'"$value"'"' "${{ inputs.workflows_directory }}/${{ inputs.workflow_level_instrumentation_file_name }}"
         done
