--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,6 +7,7 @@
   "prHourlyLimit": 0,
   "prConcurrentLimit": 0,
   "automerge": true,
+  "rebaseWhen": "conflicted",
   "packageRules": [
     {
       "groupName": "opentelemetry-python monorepo",
