--- a/.github/workflows/analyze.yaml
+++ b/.github/workflows/analyze.yaml
@@ -29,6 +29,8 @@ jobs:
             build-mode: none
           - language: java
             build-mode: none
+          - language: actions
+            build-mode: none
     steps:
       - uses: plengauer/opentelemetry-github/actions/instrument/job@v5.13.0
         with:
