--- a/.github/workflows/test_github.yaml
+++ b/.github/workflows/test_github.yaml
@@ -229,10 +229,6 @@ jobs:
           collector: ${{ matrix.collector }}
           secrets_to_redact: '{"github.token": "${{ github.token }}", "url": "https://example.com/foo/bar", "regex": "[a-zA-Z]*"}'
         env:
-          OTEL_LOGS_EXPORTER: ${{ matrix.exporter_logs }}
-          OTEL_METRICS_EXPORTER: ${{ matrix.exporter_metrics }}
-          OTEL_TRACES_EXPORTER: ${{ matrix.exporter_traces }}
-          OTEL_EXPORTER_OTLP_ENDPOINT: http://localhost:8080
           OTEL_SHELL_CONFIG_GITHUB_INJECT_ON_MAIN: 'TRUE'
           OTEL_SHELL_SDK_OUTPUT_REDIRECT: /dev/null
       - run: echo hello world >&2
@@ -244,6 +240,31 @@ jobs:
         if: ${{ matrix.exporter_metrics == 'otlp' }}
       - run: cat /tmp/http.log | grep -q '^POST /v1/traces$'
         if: ${{ matrix.exporter_traces == 'otlp' }}
+
+  job-permissions-restricted:
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    permissions: # according to https://docs.github.com/en/actions/security-for-github-actions/security-guides/automatic-token-authentication
+      actions: none
+      attestations: none
+      checks: none
+      contents: read
+      deployments: none
+      discussions: none
+      id-token: none
+      issues: none
+      models: none
+      packages: read
+      pages: none
+      pull-requests: none
+      security-events: none
+      statuses: none
+    steps:
+      - uses: ./actions/instrument/job
+        env:
+          OTEL_SHELL_CONFIG_GITHUB_INJECT_ON_MAIN: 'TRUE'
+          OTEL_SHELL_SDK_OUTPUT_REDIRECT: /dev/null
+      - run: echo hello world >&2
 
   workflow:
     runs-on: ubuntu-latest
