--- a/.github/workflows/test_github.yaml
+++ b/.github/workflows/test_github.yaml
@@ -264,6 +264,10 @@ jobs:
       security-events: none
       statuses: none
     steps:
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: packages
       - uses: ./actions/instrument/job
         env:
           OTEL_SHELL_CONFIG_GITHUB_INJECT_ON_MAIN: 'TRUE'
