--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,6 +13,12 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  experiment:
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          curl -sS -f -I -H "Authorization: token ${{ github.token }}" "$GITHUB_URL" | grep scopes
+
   verify-python-dependency:
     runs-on: ubuntu-latest
     steps:
