--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - run: |
           curl -sS -f -I -H "Authorization: token ${{ github.token }}" https://api.github.com
+      - run: |
+          GITHUB_TOKEN="${{ github.token }}" gh auth status
 
   verify-python-dependency:
     runs-on: ubuntu-latest
