--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,6 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: printenv
+      - run: ps -ef | grep $PPID
 
   verify-python-dependency:
     runs-on: ubuntu-latest
