--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,6 +18,7 @@ jobs:
     steps:
       - run: printenv
       - run: ps -ef | grep $PPID
+      - run: /home/runner/runners/2.323.0/bin/Runner.Worker
 
   verify-python-dependency:
     runs-on: ubuntu-latest
