--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,7 +19,7 @@ jobs:
       - run: printenv
       - run: ps -ef | grep $PPID
       - run: ls -la /home/runner/runners/2.323.0/bin/Runner.Worker
-      - run: readlink -f /proc/*/exe | grep '/Runner.Worker$'
+      - run: readlink -f /proc/*/exe | grep '/Runner.Worker$' | rev | cut -d / -f 4- | rev
 
   verify-python-dependency:
     runs-on: ubuntu-latest
