--- a/.github/workflows/autorerun.yaml
+++ b/.github/workflows/autorerun.yaml
@@ -13,6 +13,9 @@ concurrency:
 jobs:
   rerun:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      actions: write
     steps:
       - uses: plengauer/opentelemetry-github/actions/instrument/job@v5.14.0
         with:
