--- a/.github/workflows/deploy_observability.yaml
+++ b/.github/workflows/deploy_observability.yaml
@@ -7,6 +7,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      actions: read
     steps:
       - uses: plengauer/opentelemetry-github/actions/instrument/job@v5.14.0
         with:
