--- a/.github/workflows/experiment.yaml
+++ b/.github/workflows/experiment.yaml
@@ -7,6 +7,8 @@ on:
 jobs:
   experiment:
     runs-on: ubuntu-latest
+    permissions:
+      actions: read
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/instrument/job
