--- a/.github/workflows/autoversion.yaml
+++ b/.github/workflows/autoversion.yaml
@@ -9,7 +9,7 @@ jobs:
   bump:
     runs-on: ubuntu-latest
     permissions:
-      actions: read
+      contents: none
     steps:
       - uses: plengauer/opentelemetry-github/actions/instrument/job@v5.14.0
         with:
