--- a/.github/workflows/experiment.yaml
+++ b/.github/workflows/experiment.yaml
@@ -8,6 +8,7 @@ jobs:
   experiment:
     runs-on: ubuntu-latest
     permissions:
+      contents: read
       actions: read
     steps:
       - uses: actions/checkout@v4
