--- a/.github/workflows/refresh_demos.yaml
+++ b/.github/workflows/refresh_demos.yaml
@@ -8,7 +8,7 @@ jobs:
   prepare:
     runs-on: ubuntu-latest
     permissions:
-      actions: read
+      contents: read
     outputs:
       matrix: ${{ steps.demos.outputs.matrix }}
     steps:
@@ -25,6 +25,7 @@ jobs:
     needs: prepare
     runs-on: ubuntu-latest
     permissions:
+      contents: read
       actions: read
     strategy: 
       fail-fast: false
