--- a/actions/instrument/deploy/action.yaml
+++ b/actions/instrument/deploy/action.yaml
@@ -72,6 +72,11 @@ runs:
       run: |
         (ls "${{ inputs.workflows_directory }}"/*.yaml "${{ inputs.workflows_directory }}"/*.yml 2> /dev/null || true) | while read -r workflow_file; do
           [ -n "${{ inputs.job_level_instrumentation_exclude }}" ] && cat "$workflow_file" | yq .name | grep -qF "$(echo "${{ inputs.job_level_instrumentation_exclude }}" | tr ',' '\n' | tr ':' '\n' | tr ';' '\n')" && continue || true
+          if [ cat "$workflow_file" | yq ".jobs.$job_name.permissions" != null ] && [ "$(cat "$workflow_file" | yq ".jobs.$job_name.permissions.actions")" != write ]; then
+            yq -i ".jobs.$job_name.permissions.actions = \"read\"" "$workflow_file"
+          elif [ cat "$workflow_file" | yq ".permissions" != null ] && [ "$(cat "$workflow_file" | yq ".permissions.actions")" != write ]; then
+            yq -i ".permissions.actions = \"read\"" "$workflow_file"
+          fi
           [ "$workflow_file" != "${{ steps.find-workflow-level-instrumentation.outputs.path }}" ] || continue
           [ "$workflow_file" != "${{ inputs.workflows_directory }}/${{ inputs.workflow_level_instrumentation_file_name }}" ] || continue
           cat "$workflow_file" | yq '.jobs | keys[]' | while read -r job_name; do
@@ -85,6 +90,10 @@ runs:
             done
           done
         done
+    - name: "Adjust Permissions":
+      shell: bash
+      run: |
+        
     - name: "Open Pull Request"
       id: open-pr
       uses: peter-evans/create-pull-request@v7
