--- a/actions/instrument/deploy/action.yaml
+++ b/actions/instrument/deploy/action.yaml
@@ -91,9 +91,9 @@ runs:
         (ls "${{ inputs.workflows_directory }}"/*.yaml "${{ inputs.workflows_directory }}"/*.yml 2> /dev/null || true) | while read -r workflow_file; do
           cat "$workflow_file" | yq '.jobs | keys[]' | while read -r job_name; do
             cat "$workflow_file" | yq ".jobs.$job_name.steps" | grep -qvF null || continue
-            if [ cat "$workflow_file" | yq ".jobs.$job_name.permissions" != null ] && [ "$(cat "$workflow_file" | yq ".jobs.$job_name.permissions.actions")" != write ]; then
+            if [ cat "$workflow_file" | yq ".jobs.$job_name.permissions" != null ] && [ "$(cat "$workflow_file" | yq ".jobs.$job_name.permissions.actions")" != read ] && [ "$(cat "$workflow_file" | yq ".jobs.$job_name.permissions.actions")" != write ]; then
               yq -i ".jobs.$job_name.permissions.actions = \"read\"" "$workflow_file"
-            elif [ cat "$workflow_file" | yq ".permissions" != null ] && [ "$(cat "$workflow_file" | yq ".permissions.actions")" != write ]; then
+            elif [ cat "$workflow_file" | yq ".permissions" != null ] && [ "$(cat "$workflow_file" | yq ".permissions.actions")" != read ] && [ "$(cat "$workflow_file" | yq ".permissions.actions")" != write ]; then
               yq -i ".permissions.actions = \"read\"" "$workflow_file"
             fi
           done
