--- a/actions/instrument/deploy/action.yaml
+++ b/actions/instrument/deploy/action.yaml
@@ -47,7 +47,7 @@ runs:
       shell: bash
       run: |
         echo '
-        name: ${{ workflow_level_instrumentation_workflow_name }}
+        name: ${{ inputs.workflow_level_instrumentation_workflow_name }}
         on:
           workflow_run:
             workflows: []
