Tighten permissions in workflows and also in deployment

--- a/.github/workflows/autorerun.yaml
+++ b/.github/workflows/autorerun.yaml
@@ -13,6 +13,8 @@ concurrency:
 jobs:
   rerun:
     runs-on: ubuntu-latest
+    permissions:
+      contents: none
     steps:
       - uses: plengauer/opentelemetry-github/actions/instrument/job@v5.15.0
         with:
