--- a/.github/workflows/autoversion.yaml
+++ b/.github/workflows/autoversion.yaml
@@ -8,6 +8,8 @@ on:
 jobs:
   bump:
     runs-on: ubuntu-latest
+    permissions:
+      contents: none
     steps:
       - uses: plengauer/opentelemetry-github/actions/instrument/job@v5.15.0
         with:
