--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,6 +22,7 @@ jobs:
       pull-requests: none
       security-events: none
       statuses: none
+    secrets: inherit
     uses: ./.github/workflows/test.yaml
 
   publish:
