--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -29,7 +29,10 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      actions: read
+      contents: write
+      id-token: write
+      attestations: write
     steps:
       - uses: plengauer/opentelemetry-github/actions/instrument/job@v5.15.0
         with:
@@ -47,12 +50,10 @@ jobs:
         with:
           subject-path: ./package.deb
           subject-name: opentelemetry-shell_${{ steps.version.outputs.version }}.deb
-          github-token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
       - uses: actions/attest-build-provenance@v2
         with:
           subject-path: ./package.rpm
           subject-name: opentelemetry-shell_${{ steps.version.outputs.version }}.rpm
-          github-token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
       - uses: actions/create-release@v1
         id: create_release
         env:
