--- a/.github/workflows/test_github.yaml
+++ b/.github/workflows/test_github.yaml
@@ -365,6 +365,7 @@ jobs:
         with:
           debug: 1
           dry_run: true
+          action_repository: '.'
         env:
           OTEL_METRICS_EXPORTER: console
           OTEL_LOGS_EXPORTER: console
