--- a/.github/workflows/test_github.yaml
+++ b/.github/workflows/test_github.yaml
@@ -353,3 +353,22 @@ jobs:
           cat "$OTLP_JSON" | jq -r .name | grep -v '^null$' | sort -u | grep 'Set up job'
           cat "$OTLP_JSON" | jq -r .name | grep -v '^null$' | sort -u | grep 'Complete job'
           # cat "$OTLP_JSON" | jq -r .body | grep -v '^null$' | sort -u | grep 'Cleaning up orphan processes'
+
+  deploy:
+    if: false # this test doesnt work as intended because we cannot find the deploy step (because its not qualified properly with a version) and because its in a subworkflow and cannot be found
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    permissions:
+      actions: read
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./actions/instrument/deploy
+        with:
+          debug: 1
+          dry_run: true
+          action_repository: '.'
+        env:
+          OTEL_METRICS_EXPORTER: console
+          OTEL_LOGS_EXPORTER: console
+          OTEL_TRACES_EXPORTER: console
+          OTEL_SHELL_SDK_OUTPUT_REDIRECT: '${{ steps.filename.outputs.otlp }}'
