--- a/actions/instrument/deploy/action.yaml
+++ b/actions/instrument/deploy/action.yaml
@@ -64,7 +64,7 @@ runs:
           export:
             runs-on: ubuntu-latest
             steps:
-              - uses: {{ inputs.action_repository }}/actions/instrument/workflow@${{ inputs.action_version }}
+              - uses: ${{ inputs.action_repository }}/actions/instrument/workflow@${{ inputs.action_version }}
         ' > "${{ inputs.workflows_directory }}/${{ inputs.workflow_level_instrumentation_file_name }}"
         cat "${{ steps.find-self.outputs.path }}" | yq '.jobs[].steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/deploy@*") | .env | keys[]' | grep '^OTEL_' | while read -r key; do
           value="$(cat "${{ steps.find-self.outputs.path }}" | yq '.jobs[].steps[] | select(.uses == "${{ inputs.action_repository }}/actions/instrument/deploy@*") | .env.'"$key")"
