--- a/actions/instrument/workflow/action.yaml
+++ b/actions/instrument/workflow/action.yaml
@@ -23,5 +23,5 @@ inputs:
     description: 'Enable debug logging'
     default: '${{ runner.debug }}'
   __kill_switch:
-    description: 'Set OTEL_GITHUB_KILL_SWITCH variable for the repository or organization to any non-empty value to disable all monitoring in case of an emergency. DO NOT SET MANUALLY.'
-    default: '${{ vars.OTEL_GITHUB_KILL_SWITCH }}'
+    description: 'INTERNAL ONLY - DO NOT SET MANUALLY' # 'Set OTEL_GITHUB_KILL_SWITCH variable for the repository or organization to any non-empty value to disable all monitoring in case of an emergency. DO NOT SET MANUALLY.'
+    default: '' # '${{ vars.OTEL_GITHUB_KILL_SWITCH }}'
